# dsapp_pro

./: .clang-format  .gitignore  cli.py  dsAppApi.py
callbacks/: __init__.py  nvosd_arcface_cbs.py  nvosd_cbs.py  nvosd_emotion_cbs.py
common/: FPS.py  bus_call.py  platform_info.py
eleproxy/: __init__.py  middleware.py  nvmidware.py  nvmsgele.py  nvpreprocess.py  rtspclient.py  sources.py  sumup.py  ultimate.py
face_recognition/: DEBUG_NO_BBOX.md  __init__.py  deprobe.py  inference_chain.py  pipeline.py  probe.py  stream_branch.py  types.py
ifaiss/: IIndex.py  IIndexFlatIP.py  IIndexFlatL2.py  __init__.py  async_matcher.py
logger/: __init__.py  get_logger.py
nvconfigs/: dsapp_config_tracker_NvDCF_perf.yml  dsapp_msgbroker_cfg_redis.txt  dsapp_pgie_config.txt  dsapp_pgie_scrfd_config.txt  dsapp_preprocess_config.txt  dsapp_preprocess_pgie_config.txt  dsapp_preprocess_pgie_config_b2.txt  dsapp_preprocess_pgie_config_b4.txt  dsapp_scrfd_pgie_config.txt  dsapp_sgie_arcface_config.txt  dsapp_sgie_eferplus8_config.txt  dsapp_sgie_emotion_config.txt  dsapp_tracker_config.txt  dstest4_msgconv_config.txt
parser/: CMakeLists.txt
parser/arcface_parse/: CMakeLists.txt  arcface_r50_wbface.cpp
parser/ctpreprocess/: CMakeLists.txt  custom2d_preprocess.cpp
parser/e_ferplus_8_parse/: CMakeLists.txt  nvdsinfer_custom_e_ferplus_8.cpp
parser/emotion_parse/: CMakeLists.txt  nvdsinfer_custom_emotion.cpp
parser/scrfd_parse/: CMakeLists.txt  nvdsinfer_custom_scrfd.cpp
pipelines/face_recognition/: inference_chain.py  message_branch.py  pipeline.py
pipelines/facial_emo_recog/: __init__.py  inference_chain.py  message_branch.py  pipeline.py  probe.py  stream_branch.py  types.py
scripts/: build_emotion_engin_b4.sh  build_face_db.py  convert_video_for_deepstream.sh  emotion_onnx_dynamic_batch.py
test/: ds.app.fr.msg.rtsp-io.py  ds.app.lf.pp.py  ds.app.usbcam.faiss.ctobj.msgremote.py  ds.app.usbcam.faiss.ctobj.py  ds.app.usbcam.faiss.py
